@@ -1027,8 +1027,16 @@ and transl_exp0 e =
              forward_tag *)
           | Tvar _ | Tlink _ | Tsubst _ | Tunivar _
           | Tpoly(_,_) | Tfield(_,_,_,_) ->
-              Lprim(Pmakeblock(Obj.forward_tag, Immutable, None),
-                    [transl_exp e], e.exp_loc)
+              (* CR-someday mshinwell: Consider adding a new primitive that
+                 expresses the construction of forward_tag blocks.  We need to
+                 use [Popaque] here to prevent unsound optimisation in Flambda,
+                 but the concept of a mutable block doesn't really match what is
+                 going on here.  This value may subsequently turn into an
+                 immediate... *)
+              Lprim (Popaque,
+                [Lprim(Pmakeblock(Obj.forward_tag, Immutable, None),
+                      [transl_exp e], e.exp_loc)],
+                e.exp_loc)
           (* the following cannot be represented as float/forward/lazy:
              optimize *)
           | Tarrow(_,_,_,_) | Ttuple _ | Tpackage _ | Tobject(_,_) | Tnil
@@ -1050,8 +1058,10 @@ and transl_exp0 e =
                 || has_base_type e Predef.path_int64
               then transl_exp e
               else
-                Lprim(Pmakeblock(Obj.forward_tag, Immutable, None),
-                      [transl_exp e], e.exp_loc)
+                Lprim (Popaque,
+                  [Lprim(Pmakeblock(Obj.forward_tag, Immutable, None),
+                    [transl_exp e], e.exp_loc)],
+                  e.exp_loc)
           end
       (* other cases compile to a lazy block holding a function *)
       | _ ->
